# safe

./: .gitignore  README.md  pyproject.toml
demos/: wb2_240x121.py
outputs/: metrics_fuxi_240x121.pkl  metrics_graphcast_240x121.pkl  metrics_keisler_240x121.pkl  metrics_neuralgcm_240x121.pkl  metrics_pangu_240x121.pkl  metrics_sphericalcnn_240x121.pkl
outputs/new_graphcast_shapes/: new_graphcast_shapes.dbf  new_graphcast_shapes.shp  new_graphcast_shapes.shx
outputs/old_and_malformed/: metrics_graphcast_240x121.pkl  metrics_keisler_240x121.pkl  metrics_pangu_240x121.pkl  metrics_sphericalcnn_240x121.pkl
safe/metrics/: errors.py  losses.py
safe/utils/: errors.py  geometry_funcs.py  test_utils.py
sfear/data/: era5.py  test_data.py  wb2.py
sfear/metadata/: generate_gdf.py  metadata.py
slurm_scripts/: wb2_240x121_demo.sh
src/safe_earth/viz/: viz_metrics.py
